# Computer-Graphics-from-Scratch

./: .gitignore  CMakeLists.txt  README.md
cmake/: configuration.cmake
rasterizer/: CMakeLists.txt
rasterizer/src/: camera.c  camera.h  canvas.c  canvas.h  clipping.c  clipping.h  color.c  color.h  image.c  image.h  input.h  linear_algebra.c  linear_algebra.h  main.c  model.h  renderer.c  renderer.h  scene.c  scene.h  transform.c  transform.h  window.c  window.h
